# worktree-manager

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  build.zig  build.zig.zon  gitws.sh  go.mod  go.sum  install.sh  main.go  makefile  repository.md  setup.bash  ws.sh
.devcontainer/: .gitignore  Dockerfile  compose.yml  devcontainer.json  initialize.sh  postcreate.sh
.devcontainer/config/: .bashrc  .tmux.conf  starship.toml
.devcontainer/config/nvim/: init.lua
cmd/: add.go  clone.go  config.go  create.go  helpers.go  iterative.go  list.go  rm.go  root.go  version.go
src/: cmds.rs  gitws.bash  lib.rs  main.rs  main.zig  utils.rs
src/cmds/: add.rs  cd.rs  clone.rs  create.rs  list.rs  rm.rs
tests/: test_clone.rs  test_help.rs
