[package]
name = "worktree-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.41", features = ["derive"] }
git2 = { version = "0.20.2", features = ["ssh", "https", "vendored-libgit2"] }
random-string = "1.1.0"
regex = "1.11.1"
tempdir = "0.3.7"

[dev-dependencies]
assert_cmd = "2.0.17"
